// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AugmentTable > click Avg DPM — reorders by DPM descending 1`] = `
<div>
  <div
    class="card"
  >
    <div
      style="display: flex; gap: 8px; align-items: center; margin-bottom: 12px;"
    >
      <span
        style="font-size: 11px; color: var(--text-muted); margin-right: 2px;"
      >
        Rarity
      </span>
      <button
        class="aug-btn active"
      >
        All
      </button>
      <button
        class="aug-btn "
      >
        Silver
      </button>
      <button
        class="aug-btn "
      >
        Gold
      </button>
      <button
        class="aug-btn "
      >
        Prismatic
      </button>
    </div>
    <table>
      <thead>
        <tr>
          <th>
            Augment
          </th>
          <th>
            Rarity
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Picks
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
             ▼
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Score
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(240, 180, 41); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Gold Rush"
              >
                <img
                  alt="Gold Rush"
                  src="mayhem-asset://augment-icons/2.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Gold Rush
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(240, 180, 41); border: 1px solid rgb(240, 180, 41); opacity: 0.9;"
            >
              Gold
            </span>
          </td>
          <td>
            6
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 33.33333333333333%; background: var(--red);"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
          <td>
            900
            /min
          </td>
          <td
            style="color: rgb(195, 162, 34); font-weight: 600;"
          >
            4.0
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(192, 192, 192); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Iron Will"
              >
                <img
                  alt="Iron Will"
                  src="mayhem-asset://augment-icons/1.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Iron Will
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(192, 192, 192); border: 1px solid rgb(192, 192, 192); opacity: 0.9;"
            >
              Silver
            </span>
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 66.66666666666666%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            700
            /min
          </td>
          <td
            style="color: rgb(155, 195, 34); font-weight: 600;"
          >
            6.3
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(180, 75, 225); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Prismatic Eye"
              >
                <img
                  alt="Prismatic Eye"
                  src="mayhem-asset://augment-icons/3.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Prismatic Eye
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(180, 75, 225); border: 1px solid rgb(180, 75, 225); opacity: 0.9;"
            >
              Prismatic
            </span>
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 66.66666666666666%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            500
            /min
          </td>
          <td
            style="color: rgb(158, 195, 34); font-weight: 600;"
          >
            6.2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AugmentTable > click Gold — shows only Gold augments 1`] = `
<div>
  <div
    class="card"
  >
    <div
      style="display: flex; gap: 8px; align-items: center; margin-bottom: 12px;"
    >
      <span
        style="font-size: 11px; color: var(--text-muted); margin-right: 2px;"
      >
        Rarity
      </span>
      <button
        class="aug-btn "
      >
        All
      </button>
      <button
        class="aug-btn "
      >
        Silver
      </button>
      <button
        class="aug-btn active"
        style="border-color: rgb(240, 180, 41); color: rgb(240, 180, 41);"
      >
        Gold
      </button>
      <button
        class="aug-btn "
      >
        Prismatic
      </button>
    </div>
    <table>
      <thead>
        <tr>
          <th>
            Augment
          </th>
          <th>
            Rarity
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Picks
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Score
             ▼
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(240, 180, 41); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Gold Rush"
              >
                <img
                  alt="Gold Rush"
                  src="mayhem-asset://augment-icons/2.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Gold Rush
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(240, 180, 41); border: 1px solid rgb(240, 180, 41); opacity: 0.9;"
            >
              Gold
            </span>
          </td>
          <td>
            6
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 33.33333333333333%; background: var(--red);"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
          <td>
            900
            /min
          </td>
          <td
            style="color: rgb(195, 162, 34); font-weight: 600;"
          >
            4.0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AugmentTable > click Prismatic — shows only Prismatic augments 1`] = `
<div>
  <div
    class="card"
  >
    <div
      style="display: flex; gap: 8px; align-items: center; margin-bottom: 12px;"
    >
      <span
        style="font-size: 11px; color: var(--text-muted); margin-right: 2px;"
      >
        Rarity
      </span>
      <button
        class="aug-btn "
      >
        All
      </button>
      <button
        class="aug-btn "
      >
        Silver
      </button>
      <button
        class="aug-btn "
      >
        Gold
      </button>
      <button
        class="aug-btn active"
        style="border-color: rgb(180, 75, 225); color: rgb(180, 75, 225);"
      >
        Prismatic
      </button>
    </div>
    <table>
      <thead>
        <tr>
          <th>
            Augment
          </th>
          <th>
            Rarity
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Picks
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Score
             ▼
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(180, 75, 225); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Prismatic Eye"
              >
                <img
                  alt="Prismatic Eye"
                  src="mayhem-asset://augment-icons/3.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Prismatic Eye
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(180, 75, 225); border: 1px solid rgb(180, 75, 225); opacity: 0.9;"
            >
              Prismatic
            </span>
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 66.66666666666666%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            500
            /min
          </td>
          <td
            style="color: rgb(158, 195, 34); font-weight: 600;"
          >
            6.2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AugmentTable > click Silver twice — returns to All (all rows visible) 1`] = `
<div>
  <div
    class="card"
  >
    <div
      style="display: flex; gap: 8px; align-items: center; margin-bottom: 12px;"
    >
      <span
        style="font-size: 11px; color: var(--text-muted); margin-right: 2px;"
      >
        Rarity
      </span>
      <button
        class="aug-btn active"
      >
        All
      </button>
      <button
        class="aug-btn "
        style=""
      >
        Silver
      </button>
      <button
        class="aug-btn "
      >
        Gold
      </button>
      <button
        class="aug-btn "
      >
        Prismatic
      </button>
    </div>
    <table>
      <thead>
        <tr>
          <th>
            Augment
          </th>
          <th>
            Rarity
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Picks
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Score
             ▼
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(192, 192, 192); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Iron Will"
              >
                <img
                  alt="Iron Will"
                  src="mayhem-asset://augment-icons/1.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Iron Will
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(192, 192, 192); border: 1px solid rgb(192, 192, 192); opacity: 0.9;"
            >
              Silver
            </span>
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 66.66666666666666%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            700
            /min
          </td>
          <td
            style="color: rgb(155, 195, 34); font-weight: 600;"
          >
            6.3
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(180, 75, 225); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Prismatic Eye"
              >
                <img
                  alt="Prismatic Eye"
                  src="mayhem-asset://augment-icons/3.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Prismatic Eye
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(180, 75, 225); border: 1px solid rgb(180, 75, 225); opacity: 0.9;"
            >
              Prismatic
            </span>
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 66.66666666666666%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            500
            /min
          </td>
          <td
            style="color: rgb(158, 195, 34); font-weight: 600;"
          >
            6.2
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(240, 180, 41); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Gold Rush"
              >
                <img
                  alt="Gold Rush"
                  src="mayhem-asset://augment-icons/2.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Gold Rush
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(240, 180, 41); border: 1px solid rgb(240, 180, 41); opacity: 0.9;"
            >
              Gold
            </span>
          </td>
          <td>
            6
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 33.33333333333333%; background: var(--red);"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
          <td>
            900
            /min
          </td>
          <td
            style="color: rgb(195, 162, 34); font-weight: 600;"
          >
            4.0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AugmentTable > click Silver — shows only Silver augments 1`] = `
<div>
  <div
    class="card"
  >
    <div
      style="display: flex; gap: 8px; align-items: center; margin-bottom: 12px;"
    >
      <span
        style="font-size: 11px; color: var(--text-muted); margin-right: 2px;"
      >
        Rarity
      </span>
      <button
        class="aug-btn "
      >
        All
      </button>
      <button
        class="aug-btn active"
        style="border-color: rgb(192, 192, 192); color: rgb(192, 192, 192);"
      >
        Silver
      </button>
      <button
        class="aug-btn "
      >
        Gold
      </button>
      <button
        class="aug-btn "
      >
        Prismatic
      </button>
    </div>
    <table>
      <thead>
        <tr>
          <th>
            Augment
          </th>
          <th>
            Rarity
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Picks
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Score
             ▼
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(192, 192, 192); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Iron Will"
              >
                <img
                  alt="Iron Will"
                  src="mayhem-asset://augment-icons/1.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Iron Will
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(192, 192, 192); border: 1px solid rgb(192, 192, 192); opacity: 0.9;"
            >
              Silver
            </span>
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 66.66666666666666%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            700
            /min
          </td>
          <td
            style="color: rgb(155, 195, 34); font-weight: 600;"
          >
            6.3
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AugmentTable > click Win Rate — reorders by win rate descending 1`] = `
<div>
  <div
    class="card"
  >
    <div
      style="display: flex; gap: 8px; align-items: center; margin-bottom: 12px;"
    >
      <span
        style="font-size: 11px; color: var(--text-muted); margin-right: 2px;"
      >
        Rarity
      </span>
      <button
        class="aug-btn active"
      >
        All
      </button>
      <button
        class="aug-btn "
      >
        Silver
      </button>
      <button
        class="aug-btn "
      >
        Gold
      </button>
      <button
        class="aug-btn "
      >
        Prismatic
      </button>
    </div>
    <table>
      <thead>
        <tr>
          <th>
            Augment
          </th>
          <th>
            Rarity
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Picks
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
             ▼
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Score
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(192, 192, 192); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Iron Will"
              >
                <img
                  alt="Iron Will"
                  src="mayhem-asset://augment-icons/1.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Iron Will
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(192, 192, 192); border: 1px solid rgb(192, 192, 192); opacity: 0.9;"
            >
              Silver
            </span>
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 66.66666666666666%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            700
            /min
          </td>
          <td
            style="color: rgb(155, 195, 34); font-weight: 600;"
          >
            6.3
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(180, 75, 225); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Prismatic Eye"
              >
                <img
                  alt="Prismatic Eye"
                  src="mayhem-asset://augment-icons/3.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Prismatic Eye
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(180, 75, 225); border: 1px solid rgb(180, 75, 225); opacity: 0.9;"
            >
              Prismatic
            </span>
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 66.66666666666666%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            500
            /min
          </td>
          <td
            style="color: rgb(158, 195, 34); font-weight: 600;"
          >
            6.2
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(240, 180, 41); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Gold Rush"
              >
                <img
                  alt="Gold Rush"
                  src="mayhem-asset://augment-icons/2.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Gold Rush
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(240, 180, 41); border: 1px solid rgb(240, 180, 41); opacity: 0.9;"
            >
              Gold
            </span>
          </td>
          <td>
            6
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 33.33333333333333%; background: var(--red);"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
          <td>
            900
            /min
          </td>
          <td
            style="color: rgb(195, 162, 34); font-weight: 600;"
          >
            4.0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`AugmentTable > default render — sorted by picks descending, All rarity active 1`] = `
<div>
  <div
    class="card"
  >
    <div
      style="display: flex; gap: 8px; align-items: center; margin-bottom: 12px;"
    >
      <span
        style="font-size: 11px; color: var(--text-muted); margin-right: 2px;"
      >
        Rarity
      </span>
      <button
        class="aug-btn active"
      >
        All
      </button>
      <button
        class="aug-btn "
      >
        Silver
      </button>
      <button
        class="aug-btn "
      >
        Gold
      </button>
      <button
        class="aug-btn "
      >
        Prismatic
      </button>
    </div>
    <table>
      <thead>
        <tr>
          <th>
            Augment
          </th>
          <th>
            Rarity
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Picks
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Score
             ▼
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(192, 192, 192); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Iron Will"
              >
                <img
                  alt="Iron Will"
                  src="mayhem-asset://augment-icons/1.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Iron Will
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(192, 192, 192); border: 1px solid rgb(192, 192, 192); opacity: 0.9;"
            >
              Silver
            </span>
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 66.66666666666666%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            700
            /min
          </td>
          <td
            style="color: rgb(155, 195, 34); font-weight: 600;"
          >
            6.3
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(180, 75, 225); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Prismatic Eye"
              >
                <img
                  alt="Prismatic Eye"
                  src="mayhem-asset://augment-icons/3.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Prismatic Eye
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(180, 75, 225); border: 1px solid rgb(180, 75, 225); opacity: 0.9;"
            >
              Prismatic
            </span>
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 66.66666666666666%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
          <td>
            500
            /min
          </td>
          <td
            style="color: rgb(158, 195, 34); font-weight: 600;"
          >
            6.2
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 24px; height: 24px; border-radius: 4px; border: 1px solid rgb(240, 180, 41); overflow: hidden; flex-shrink: 0; background: var(--bg-primary); display: inline-flex;"
                title="Gold Rush"
              >
                <img
                  alt="Gold Rush"
                  src="mayhem-asset://augment-icons/2.png"
                  style="width: 100%; height: 100%; object-fit: cover;"
                />
              </div>
              Gold Rush
            </div>
          </td>
          <td>
            <span
              style="display: inline-block; padding: 2px 8px; border-radius: 4px; font-size: 11px; font-weight: 600; color: rgb(240, 180, 41); border: 1px solid rgb(240, 180, 41); opacity: 0.9;"
            >
              Gold
            </span>
          </td>
          <td>
            6
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 33.33333333333333%; background: var(--red);"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
          <td>
            900
            /min
          </td>
          <td
            style="color: rgb(195, 162, 34); font-weight: 600;"
          >
            4.0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ChampionTable > click Avg DPM — reorders rows by DPM descending 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Champion
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            KDA
          </th>
          <th>
            K / D / A
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
             ▼
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Score
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Lux"
                src="mayhem-asset://champion-icons/3.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Lux
            </div>
          </td>
          <td>
            8
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 62.5%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                63
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            6.00
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            3.8
             / 
            1.9
             / 
            7.5
          </td>
          <td>
            950
            /min
          </td>
          <td
            style="color: rgb(168, 195, 34); font-weight: 600;"
          >
            5.8
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Annie"
                src="mayhem-asset://champion-icons/1.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Annie
            </div>
          </td>
          <td>
            10
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 70%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                70
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            4.50
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            5.0
             / 
            2.0
             / 
            4.0
          </td>
          <td>
            800
            /min
          </td>
          <td
            style="color: rgb(149, 195, 34); font-weight: 600;"
          >
            6.4
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Teemo"
                src="mayhem-asset://champion-icons/2.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Teemo
            </div>
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 40%; background: var(--red);"
                />
              </div>
              <span
                class="loss"
              >
                40
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            1.20
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            4.0
             / 
            5.0
             / 
            2.0
          </td>
          <td>
            600
            /min
          </td>
          <td
            style="color: rgb(195, 177, 34); font-weight: 600;"
          >
            4.4
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ChampionTable > click Win Rate twice — shows ▲ (ascending) 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Champion
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
             ▲
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            KDA
          </th>
          <th>
            K / D / A
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Score
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Teemo"
                src="mayhem-asset://champion-icons/2.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Teemo
            </div>
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 40%; background: var(--red);"
                />
              </div>
              <span
                class="loss"
              >
                40
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            1.20
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            4.0
             / 
            5.0
             / 
            2.0
          </td>
          <td>
            600
            /min
          </td>
          <td
            style="color: rgb(195, 177, 34); font-weight: 600;"
          >
            4.4
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Lux"
                src="mayhem-asset://champion-icons/3.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Lux
            </div>
          </td>
          <td>
            8
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 62.5%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                63
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            6.00
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            3.8
             / 
            1.9
             / 
            7.5
          </td>
          <td>
            950
            /min
          </td>
          <td
            style="color: rgb(168, 195, 34); font-weight: 600;"
          >
            5.8
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Annie"
                src="mayhem-asset://champion-icons/1.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Annie
            </div>
          </td>
          <td>
            10
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 70%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                70
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            4.50
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            5.0
             / 
            2.0
             / 
            4.0
          </td>
          <td>
            800
            /min
          </td>
          <td
            style="color: rgb(149, 195, 34); font-weight: 600;"
          >
            6.4
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ChampionTable > click Win Rate — reorders rows and shows ▼ on header 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Champion
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
             ▼
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            KDA
          </th>
          <th>
            K / D / A
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Score
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Annie"
                src="mayhem-asset://champion-icons/1.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Annie
            </div>
          </td>
          <td>
            10
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 70%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                70
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            4.50
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            5.0
             / 
            2.0
             / 
            4.0
          </td>
          <td>
            800
            /min
          </td>
          <td
            style="color: rgb(149, 195, 34); font-weight: 600;"
          >
            6.4
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Lux"
                src="mayhem-asset://champion-icons/3.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Lux
            </div>
          </td>
          <td>
            8
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 62.5%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                63
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            6.00
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            3.8
             / 
            1.9
             / 
            7.5
          </td>
          <td>
            950
            /min
          </td>
          <td
            style="color: rgb(168, 195, 34); font-weight: 600;"
          >
            5.8
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Teemo"
                src="mayhem-asset://champion-icons/2.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Teemo
            </div>
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 40%; background: var(--red);"
                />
              </div>
              <span
                class="loss"
              >
                40
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            1.20
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            4.0
             / 
            5.0
             / 
            2.0
          </td>
          <td>
            600
            /min
          </td>
          <td
            style="color: rgb(195, 177, 34); font-weight: 600;"
          >
            4.4
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`ChampionTable > default render — sorted by games descending 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Champion
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            KDA
          </th>
          <th>
            K / D / A
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Avg DPM
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Score
             ▼
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Annie"
                src="mayhem-asset://champion-icons/1.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Annie
            </div>
          </td>
          <td>
            10
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 70%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                70
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            4.50
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            5.0
             / 
            2.0
             / 
            4.0
          </td>
          <td>
            800
            /min
          </td>
          <td
            style="color: rgb(149, 195, 34); font-weight: 600;"
          >
            6.4
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Lux"
                src="mayhem-asset://champion-icons/3.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Lux
            </div>
          </td>
          <td>
            8
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 62.5%; background: var(--green);"
                />
              </div>
              <span
                class="win"
              >
                63
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            6.00
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            3.8
             / 
            1.9
             / 
            7.5
          </td>
          <td>
            950
            /min
          </td>
          <td
            style="color: rgb(168, 195, 34); font-weight: 600;"
          >
            5.8
          </td>
        </tr>
        <tr>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <img
                alt="Teemo"
                src="mayhem-asset://champion-icons/2.png"
                style="width: 28px; height: 28px; border-radius: 50%; border: 1px solid var(--border);"
              />
              Teemo
            </div>
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                class="wr-bar"
              >
                <div
                  class="wr-fill"
                  style="width: 40%; background: var(--red);"
                />
              </div>
              <span
                class="loss"
              >
                40
                %
              </span>
            </div>
          </td>
          <td
            class="kda"
          >
            1.20
          </td>
          <td
            style="color: var(--text-secondary); font-size: 12px;"
          >
            4.0
             / 
            5.0
             / 
            2.0
          </td>
          <td>
            600
            /min
          </td>
          <td
            style="color: rgb(195, 177, 34); font-weight: 600;"
          >
            4.4
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`CoplayerTable > click Games twice — shows ▲ (ascending) 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Player
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
             ▼
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style="font-weight: 500;"
          >
            Alice#NA1
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 66.66666666666666%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
        </tr>
        <tr>
          <td
            style="font-weight: 500;"
          >
            Carol#NA1
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 33.33333333333333%; height: 100%; background: var(--red); border-radius: 3px;"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
        </tr>
        <tr>
          <td
            style="font-weight: 500;"
          >
            Bob#NA1
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 80%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                80
                %
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`CoplayerTable > click Win Rate — reorders by win rate descending 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Player
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
             ▼
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style="font-weight: 500;"
          >
            Bob#NA1
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 80%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                80
                %
              </span>
            </div>
          </td>
        </tr>
        <tr>
          <td
            style="font-weight: 500;"
          >
            Alice#NA1
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 66.66666666666666%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
        </tr>
        <tr>
          <td
            style="font-weight: 500;"
          >
            Carol#NA1
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 33.33333333333333%; height: 100%; background: var(--red); border-radius: 3px;"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`CoplayerTable > default render — sorted by games descending 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Player
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
             ▼
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style="font-weight: 500;"
          >
            Alice#NA1
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 66.66666666666666%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
        </tr>
        <tr>
          <td
            style="font-weight: 500;"
          >
            Carol#NA1
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 33.33333333333333%; height: 100%; background: var(--red); border-radius: 3px;"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
        </tr>
        <tr>
          <td
            style="font-weight: 500;"
          >
            Bob#NA1
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 80%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                80
                %
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`CoplayerTable > renders names as clickable spans when onPlayerClick is provided 1`] = `
<div>
  <div
    class="card"
  >
    <table>
      <thead>
        <tr>
          <th>
            Player
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Games
             ▼
          </th>
          <th
            style="cursor: pointer; user-select: none;"
          >
            Win Rate
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style="font-weight: 500;"
          >
            <span
              style="cursor: pointer; text-decoration: underline; text-decoration-color: var(--text-muted);"
            >
              Alice#NA1
            </span>
          </td>
          <td>
            12
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 66.66666666666666%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                67
                %
              </span>
            </div>
          </td>
        </tr>
        <tr>
          <td
            style="font-weight: 500;"
          >
            <span
              style="cursor: pointer; text-decoration: underline; text-decoration-color: var(--text-muted);"
            >
              Carol#NA1
            </span>
          </td>
          <td>
            9
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 33.33333333333333%; height: 100%; background: var(--red); border-radius: 3px;"
                />
              </div>
              <span
                class="loss"
              >
                33
                %
              </span>
            </div>
          </td>
        </tr>
        <tr>
          <td
            style="font-weight: 500;"
          >
            <span
              style="cursor: pointer; text-decoration: underline; text-decoration-color: var(--text-muted);"
            >
              Bob#NA1
            </span>
          </td>
          <td>
            5
          </td>
          <td>
            <div
              style="display: flex; align-items: center; gap: 8px;"
            >
              <div
                style="width: 60px; height: 6px; background: var(--bg-primary); border-radius: 3px; overflow: hidden;"
              >
                <div
                  style="width: 80%; height: 100%; background: var(--green); border-radius: 3px;"
                />
              </div>
              <span
                class="win"
              >
                80
                %
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`MatchCard > renders with onPlayerClick — other players have clickable spans 1`] = `
<div>
  <div
    class="card match-card"
  >
    <div
      class="match-header"
    >
      <span
        class="result-badge win"
      >
        WIN
      </span>
      <span
        class="match-meta"
      >
        20:00
      </span>
      <span
        class="match-meta time-ago"
      >
        1h ago
      </span>
    </div>
    <div
      class="match-teams"
    >
      <table
        class="team-table"
      >
        <tbody>
          <tr
            class="selected-player"
          >
            <td
              class="champ-cell"
              style="width: 28px;"
            >
              <img
                alt="Annie"
                class="champ-icon"
                src="mayhem-asset://champion-icons/1.png"
              />
            </td>
            <td
              class="summoner-name"
              style="min-width: 90px; max-width: 120px;"
            >
              Me#NA1
            </td>
            <td>
              <div
                style="display: flex; gap: 2px;"
              />
            </td>
            <td
              class="kda"
              style="white-space: nowrap;"
            >
              5
              /
              1
              /
              3
            </td>
            <td
              style="color: var(--text-muted); font-size: 12px; white-space: nowrap;"
            >
              30.0
              k
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="champ-cell"
              style="width: 28px;"
            >
              <img
                alt="Teemo"
                class="champ-icon"
                src="mayhem-asset://champion-icons/2.png"
              />
            </td>
            <td
              class="summoner-name"
              style="min-width: 90px; max-width: 120px;"
            >
              <span
                style="cursor: pointer; text-decoration: underline; text-decoration-color: var(--text-muted);"
              >
                Ally#NA1
              </span>
            </td>
            <td>
              <div
                style="display: flex; gap: 2px;"
              />
            </td>
            <td
              class="kda"
              style="white-space: nowrap;"
            >
              3
              /
              2
              /
              6
            </td>
            <td
              style="color: var(--text-muted); font-size: 12px; white-space: nowrap;"
            >
              20.0
              k
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="team-divider"
      />
      <table
        class="team-table"
      >
        <tbody>
          <tr
            class=""
          >
            <td
              class="champ-cell"
              style="width: 28px;"
            >
              <img
                alt="Lux"
                class="champ-icon"
                src="mayhem-asset://champion-icons/3.png"
              />
            </td>
            <td
              class="summoner-name"
              style="min-width: 90px; max-width: 120px;"
            >
              <span
                style="cursor: pointer; text-decoration: underline; text-decoration-color: var(--text-muted);"
              >
                Foe#NA1
              </span>
            </td>
            <td>
              <div
                style="display: flex; gap: 2px;"
              />
            </td>
            <td
              class="kda"
              style="white-space: nowrap;"
            >
              1
              /
              4
              /
              0
            </td>
            <td
              style="color: var(--text-muted); font-size: 12px; white-space: nowrap;"
            >
              15.0
              k
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`MatchCard > renders without onPlayerClick — names are plain text 1`] = `
<div>
  <div
    class="card match-card"
  >
    <div
      class="match-header"
    >
      <span
        class="result-badge win"
      >
        WIN
      </span>
      <span
        class="match-meta"
      >
        20:00
      </span>
      <span
        class="match-meta time-ago"
      >
        1h ago
      </span>
    </div>
    <div
      class="match-teams"
    >
      <table
        class="team-table"
      >
        <tbody>
          <tr
            class="selected-player"
          >
            <td
              class="champ-cell"
              style="width: 28px;"
            >
              <img
                alt="Annie"
                class="champ-icon"
                src="mayhem-asset://champion-icons/1.png"
              />
            </td>
            <td
              class="summoner-name"
              style="min-width: 90px; max-width: 120px;"
            >
              Me#NA1
            </td>
            <td>
              <div
                style="display: flex; gap: 2px;"
              />
            </td>
            <td
              class="kda"
              style="white-space: nowrap;"
            >
              5
              /
              1
              /
              3
            </td>
            <td
              style="color: var(--text-muted); font-size: 12px; white-space: nowrap;"
            >
              30.0
              k
            </td>
          </tr>
          <tr
            class=""
          >
            <td
              class="champ-cell"
              style="width: 28px;"
            >
              <img
                alt="Teemo"
                class="champ-icon"
                src="mayhem-asset://champion-icons/2.png"
              />
            </td>
            <td
              class="summoner-name"
              style="min-width: 90px; max-width: 120px;"
            >
              Ally#NA1
            </td>
            <td>
              <div
                style="display: flex; gap: 2px;"
              />
            </td>
            <td
              class="kda"
              style="white-space: nowrap;"
            >
              3
              /
              2
              /
              6
            </td>
            <td
              style="color: var(--text-muted); font-size: 12px; white-space: nowrap;"
            >
              20.0
              k
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="team-divider"
      />
      <table
        class="team-table"
      >
        <tbody>
          <tr
            class=""
          >
            <td
              class="champ-cell"
              style="width: 28px;"
            >
              <img
                alt="Lux"
                class="champ-icon"
                src="mayhem-asset://champion-icons/3.png"
              />
            </td>
            <td
              class="summoner-name"
              style="min-width: 90px; max-width: 120px;"
            >
              Foe#NA1
            </td>
            <td>
              <div
                style="display: flex; gap: 2px;"
              />
            </td>
            <td
              class="kda"
              style="white-space: nowrap;"
            >
              1
              /
              4
              /
              0
            </td>
            <td
              style="color: var(--text-muted); font-size: 12px; white-space: nowrap;"
            >
              15.0
              k
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
